Terminé fotos de medicamento y envase desde camara, inicio de la bd para guardar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,16 @@
         <item>9</item>
     </string-array>
 
+    <string-array name="checkpoint">
+        <item>6</item>
+        <item>8</item>
+        <item>12</item>
+        <item>24</item>
+    </string-array>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="Save">Guardar Medicamento</string>
+    <string name="lapsos">Horas</string>
 
 </resources>
