--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,5 +44,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="Save">Guardar Medicamento</string>
     <string name="lapsos">Horas</string>
+    <string name="tania1">With\\nAnim</string>
+    <string name="tania2">Without\\nAnim</string>
+    <string name="tania3">Custom\\nRange</string>
 
 </resources>
