--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="emptyPharmacy">No tienes medicamentos por tomar</string>
+    <string name="new_medicine">Agregar Medicamento</string>
 </resources>
